# TeamTaskManagerApi

./: .gitignore  alembic.ini  pyproject.toml  team_task_manager.db  test_team_task_manager.db
alembic/: env.py
alembic/versions/: 2026_06_25_1146-09d422b72ed8_create_users_table.py  2026_06_30_1513-3e83f0a8cf28_create_workspace_tables.py  2026_07_02_1125-ec8b3a223982_create_tasks_table.py
app/: main.py
app/api/: deps.py  router.py
app/api/v1/: auth.py  health.py  tasks.py  workspaces.py
app/api/v1/dependencies/: workspaces.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  task.py  user.py  workspace.py  workspace_member.py
app/schemas/: task.py  user.py  workspace.py
tests/: conftest.py  test_auth.py  test_database.py  test_health.py  test_user_model.py  test_workspaces.py
