[project]
name = "teamtaskmanagerapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.138.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
